Added xml file and class

--- a/Super-Mario-Bros/Super-Mario-Bros/Super-Mario-Bros.csproj
+++ b/Super-Mario-Bros/Super-Mario-Bros/Super-Mario-Bros.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Functions.cs" />
+    <Compile Include="Classes\Highscores.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
