--- a/Super-Mario-Bros/Super-Mario-Bros/Super-Mario-Bros.csproj
+++ b/Super-Mario-Bros/Super-Mario-Bros/Super-Mario-Bros.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Animation.cs" />
     <Compile Include="Classes\Enemy.cs" />
     <Compile Include="Classes\Functions.cs" />
     <Compile Include="Classes\Highscores.cs" />
