--- a/Super-Mario-Bros/Super-Mario-Bros/Super-Mario-Bros.csproj
+++ b/Super-Mario-Bros/Super-Mario-Bros/Super-Mario-Bros.csproj
@@ -334,43 +334,69 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Coin.wav" />
+    <None Include="Resources\Coin.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\EnterLevel.wav" />
+    <None Include="Resources\EnterLevel.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\FireMushroom.wav" />
+    <None Include="Resources\FireMushroom.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Jump.wav" />
+    <None Include="Resources\Jump.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Kicking.wav" />
+    <None Include="Resources\Kicking.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\LevelClear.wav" />
+    <None Include="Resources\LevelClear.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\LifeLoss.wav" />
+    <None Include="Resources\LifeLoss.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\OneUp.wav" />
+    <None Include="Resources\OneUp.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Pause.wav" />
+    <None Include="Resources\Pause.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\PipeTravel.wav" />
+    <None Include="Resources\PipeTravel.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\PowerUp.wav" />
+    <None Include="Resources\PowerUp.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\RunningOutOfTime.wav" />
+    <None Include="Resources\RunningOutOfTime.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Stomp.wav" />
+    <Content Include="Resources\Button.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\FirstWalkLeft.tiff" />
@@ -401,6 +427,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ThirdWalkRight.tiff" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pick.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\KickingSound.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
